# videoGeneration

./: .env
videogeneration/: README.md  pyproject.toml
videogeneration/knowledge/: user_preference.txt
videogeneration/src/videogeneration/: crew.py  main.py
videogeneration/src/videogeneration/config/: agents.yaml  tasks.yaml
