[project]
name = "videogeneration"
version = "0.1.0"
description = "videoGeneration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
videogeneration = "videogeneration.main:run"
run_crew = "videogeneration.main:run"
train = "videogeneration.main:train"
replay = "videogeneration.main:replay"
test = "videogeneration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
